# pos-eng-ml-lv1

./: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
src/tc_01/api/: main.py
src/tc_01/core/: security.py
src/tc_01/routers/: admin.py  auth.py
